--- a/modelo-pagina-login/projeto-modelo-login/src/css/remember.css
+++ b/modelo-pagina-login/projeto-modelo-login/src/css/remember.css
@@ -78,6 +78,7 @@ p{
     padding: 3px 5px 3px 5px;
     display: block;
     margin: 5px;
+    margin-left: 24%;
     margin-bottom: 0.8rem;
     height: 21px;
     border-color: rgba(75, 16, 131, 0.671);
